--- a/templates/ToP/market_research_project_detail.html
+++ b/templates/ToP/market_research_project_detail.html
@@ -874,13 +874,9 @@
             <i class="fas fa-map-marked-alt"></i>
             Map View
         </a>
-        <a href="{% url 'market_dashboard' %}" class="btn third-button">
-            <i class="fas fa-chart-bar"></i>
-            Market Analysis
-        </a>
-        <a href="{% url 'market_charts_view' %}?location=6th+of+October&asset_type=&unit_type=" class="btn forth-button">
+        <a href="{% url 'market_charts_view' %}" class="btn forth-button">
           <i class="fas fa-chart-line"></i>
-          Units Analysis
+          Market Analysis
         </a>
       
     </div>
