--- a/templates/ToP/units_data.html
+++ b/templates/ToP/units_data.html
@@ -230,6 +230,7 @@
                     { title: "Development Delivery Date", field: "development_delivery_date", editor: rowEditor, headerFilter: "input" },
                     { title: "Sales Value", field: "sales_value", editor: numEditor, headerFilter: "number", formatter: "money" },
                     { title: "Reservation Date", field: "reservation_date", editor: rowEditor, headerFilter: "input" },
+                    { title: "Owner", field: "owner", editor: rowEditor, headerFilter: "input" },
                     { title: "Total Premium %", field: "total_premium_percent", editor: numEditor, headerFilter: "number" },
 
                     { title: "Construction Phasing", field: "construction_phasing", editor: rowEditor, headerFilter: "input" },
@@ -239,12 +240,12 @@
                     { title: "Plot Type", field: "plot_type", editor: rowEditor, headerFilter: "input" },
                     { title: "Building Style", field: "building_style", editor: rowEditor, headerFilter: "input" },
                     { title: "Building Type", field: "building_type", editor: rowEditor, headerFilter: "input" },
-                    { title: "Bedrooms", field: "num_bedrooms", editor: numEditor, headerFilter: "number" },
+                    { title: "Bedrooms", field: "num_bedrooms", editor: numEditor, headerFilter: "input" },
                     { title: "Mirror", field: "mirror", editor: rowEditor, headerFilter: "input" },
                     { title: "Unit Position", field: "unit_position", editor: rowEditor, headerFilter: "input" },
                     { title: "Floor", field: "floor", editor: rowEditor, headerFilter: "input" },
                     { title: "SAP Code", field: "sap_code", editor: rowEditor, headerFilter: "input" },
-                    { title: "Bathrooms", field: "num_bathrooms", editor: numEditor, headerFilter: "number" },
+                    { title: "Bathrooms", field: "num_bathrooms", editor: numEditor, headerFilter: "input" },
                     { title: "Parking Slots", field: "num_parking_slots", editor: numEditor, headerFilter: "number" },
 
                     { title: "Footprint", field: "footprint", editor: numEditor, headerFilter: "number" },
